Add bulk action metadata updates
